UI warnings contrast worsened from 2.82 to 2.83 #77173

Closed
opened 2020-05-29 18:21:56 +02:00 by Dalai Felinto · 13 comments

Blender Version
Broken: blender-v2.83-release, hash: 1d2b89304a
Worked: 2.82

Short description of error
Visual contrast of warnings is way worse in 2.83, and there is not even a mention

Exact steps for others to reproduce the error

Open file in 2.82 and 2.83:
smoke.blend

2.82:
image.png

2.83:
image.png

**Blender Version** Broken: blender-v2.83-release, hash: 1d2b89304a Worked: 2.82 **Short description of error** Visual contrast of warnings is way worse in 2.83, and there is not even a mention **Exact steps for others to reproduce the error** Open file in 2.82 and 2.83: [smoke.blend](https://archive.blender.org/developer/F8563487/smoke.blend) **2.82:** ![image.png](https://archive.blender.org/developer/F8563488/image.png) **2.83:** ![image.png](https://archive.blender.org/developer/F8563492/image.png)

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @Harley

Added subscriber: @Harley

I did do some work on that in this patch: https://developer.blender.org/D7203

But it could be argued that my (proposed) changes look less less alert-y?

preview-ReportBanners.png

I did do some work on that in this patch: https://developer.blender.org/D7203 But it could be argued that my (proposed) changes look less less alert-y? ![preview-ReportBanners.png](https://archive.blender.org/developer/F8563520/preview-ReportBanners.png)

That late in the release cycle I would urge the "change" to simply be matching 2.82.

That late in the release cycle I would urge the "change" to simply be matching 2.82.

I don't think that is quite as easy as that to be honest. There has not been any changes to those status bar warnings. The changes you see are just because of theme changes to colors. Preferences / Themes / Info.

So simply changing those colors back to what was used in 2.82 would make those warnings look the same, but the Info Editor would look like crap, as would the big icon in the "QuitSave" dialog.

I don't think that is quite as easy as that to be honest. There has not been any changes to those status bar warnings. The changes you see are just because of theme changes to colors. Preferences / Themes / Info. So simply changing those colors back to what was used in 2.82 would make those warnings look the same, but the Info Editor would look like crap, as would the big icon in the "QuitSave" dialog.

This issue was referenced by 7fc0053c27

This issue was referenced by 7fc0053c27e5e9ba3cc946898c7c11a8545f2777

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2020-06-02 21:05:02 +02:00

This issue was referenced by ea92f8207a

This issue was referenced by ea92f8207a99d916aef509272eca804b5136c830

Added subscriber: @FelixKutt

Added subscriber: @FelixKutt

In #77173#940970, @Harley wrote:
But it could be argued that my (proposed) changes look less less alert-y?

preview-ReportBanners.png

Could give different text colors to warnings and errors perhaps?

> In #77173#940970, @Harley wrote: > But it could be argued that my (proposed) changes look less less alert-y? > > ![preview-ReportBanners.png](https://archive.blender.org/developer/F8563520/preview-ReportBanners.png) Could give different text colors to warnings and errors perhaps?

Added subscriber: @PierreSchiller

Added subscriber: @PierreSchiller

The real problem with these warnings are that they start off in a high or low luma value selected by the theme. And the "autobalance" managed internally is unpredictable. If you choose yellow, it will go to the brightest yellow, then lower the alpha oppacity to go to a "neutral" state of the warning.
If you pick red, it will start in a bright red, then it will go to your chosen color red.
Starts at red status bar.jpg
ends in this color: Red bar warnings - Blender.jpg
Customization doesn't allow to select the text for this (at least not in March 2020, when I captured these pictures).
If anyone has already tried changing text color in current 2.83, please let me know.
Thanks.

The real problem with these warnings are that they start off in a high or low luma value selected by the theme. And the "autobalance" managed internally is unpredictable. If you choose yellow, it will go to the brightest yellow, then lower the alpha oppacity to go to a "neutral" state of the warning. If you pick red, it will start in a bright red, then it will go to your chosen color red. Starts at ![red status bar.jpg](https://archive.blender.org/developer/F8575166/red_status_bar.jpg) ends in this color: ![Red bar warnings - Blender.jpg](https://archive.blender.org/developer/F8575168/Red_bar_warnings_-_Blender.jpg) Customization doesn't allow to select the text for this (at least not in March 2020, when I captured these pictures). If anyone has already tried changing text color in current 2.83, please let me know. Thanks.
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:35:43 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77173
There is no content yet.