source/blender/makesdna/DNA_userdef_types.h
@@ -422,6 +422,8 @@ typedef struct ThemeSpace {
   unsigned char info_debug[4], info_debug_text[4];
   unsigned char info_property[4], info_property_text[4];
   unsigned char info_operator[4], info_operator_text[4];
+  unsigned char info_report_error[4], info_report_warning[4], info_report_info[4];
+  char _pad[4];
 
   unsigned char paint_curve_pivot[4];
   unsigned char paint_curve_handle[4];
